k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: kollab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: backend
          image: ghcr.io/ismailacongombo/kollab/backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: storage-data
              mountPath: /var/www/storage
            - name: cache-data
              mountPath: /var/www/bootstrap/cache
      volumes:
        - name: storage-data
          emptyDir: {}
        - name: cache-data
          emptyDir: {}
