k8s/backend-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-lb
  namespace: kollab
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: backend
