k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: kollab
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
