k8s/frontend-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-lb
  namespace: kollab
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: frontend
